fixed about and news image not showing up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,7 +321,7 @@ footer {
    height: 400px;
    padding: 0;
    margin: 100px auto;
-   background-image: url('assets/image/3-plants.webp');
+   background-image: url('../image/3-plants.webp');
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
